canary/mypod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: nginx
    ports:
      - containerPort: 80
    volumeMounts:
    - name: myvol
      mountPath: /test
  volumes:
  - name:  myvol
    persistentVolumeClaim:
      claimName: mypvc
