canary/v1_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edustack
spec:
  selector:
    matchLabels:
      color: black
  replicas: 1
  template:
    metadata:
      labels:
        color: black
    spec:
      containers:
      - name: edustack-web
        image: beomtaek78/edustack:1.0
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m

---

apiVersion: v1
kind: Service
metadata:
  name: edustack-lb
spec:
  ports:
    - name: edustack-lb-port
      port: 8080
      targetPort: 80
      nodePort: 30001
  selector:
    color: black
  type: NodePort
